--- a/super-admin-Login/Components/html/SuperAdminSignUp.html
+++ b/super-admin-Login/Components/html/SuperAdminSignUp.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp Page</title>
+    <title>Super Admin SignUp Page</title>
     <link rel="stylesheet" href="../css/Login.css">
 </head>
 <body>
     <div class="MainContainer">
-    <h1>SignUp To your Create Account</h1>
+    <h1>SignUp To your Super Admin Account</h1>
     <form action="" method="Post">
         <input type="text" name="FullName" id="FullNameSignUp" placeholder="FullName">
         <input type="email" name="Email" id="EmailSignUp" placeholder="Email">
