SuperAdmin LOGIN Validations

--- a/super-admin-Login/Components/DataTables/DataCheakerLogin.html
+++ b/super-admin-Login/Components/DataTables/DataCheakerLogin.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="MainContainer">
+      <h1>Login Data</h1>
       <table border="1px">
         <thead>
           <tr>
