--- a/super-admin-Login/Components/DataTables/DataCheakerSignUp.html
+++ b/super-admin-Login/Components/DataTables/DataCheakerSignUp.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="MainContainer">
+      <h1>SignUp Data</h1>
       <table>
         <tbody id="tableBody">
           <tr>
