--- a/super-admin-Login/Components/DataTables/DataCheakerSuperAdmin.html
+++ b/super-admin-Login/Components/DataTables/DataCheakerSuperAdmin.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="MainContainer">
+      <h1>Super Admin Data</h1>
       <table>
         <tbody id="tableBody">
           <tr>
@@ -21,4 +22,5 @@
       </table>
     </div>
   </body>
+  <script src="../js/SuperAdminSignUpData.js"></script>
 </html>
