--- a/super-admin-Login/Components/SuperAdminLogins/LoginSuperAdmin.html
+++ b/super-admin-Login/Components/SuperAdminLogins/LoginSuperAdmin.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="../css/Login.css">
 </head>
 <body>
-    <div class="MainContainer">
-    <h1>Login To your Super Admin Account To see Datas</h1>
+    <div class="MainContainer" id="MainContainer">
+    <h1>Write your Registerd Email for login To your Super Admin Account To see Datas</h1>
     <form action="" method="Post" id="SuperAdminLoginForm">
-        <p id="valid1">Email</p>
+        <label id="valid1">Email</label>
         <input type="email" name="Email" id="EmailLogin" placeholder="Email">
-        <p id="valid2">Password</p>
-        <input type="password" name="Password" id="PasswordLogin" placeholder="Password">
-        <input type="submit" name="" id="">
+        <input type="submit">
     </form>
 </div>
 </body>
