--- a/super-admin-Login/Components/css/Login.css
+++ b/super-admin-Login/Components/css/Login.css
@@ -1,48 +1,76 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-body{
-    background-color: black;
-    font-family: "Poppins", sans-serif;
+body {
+  background-color: black;
+  font-family: "Poppins", sans-serif;
 }
-.MainContainer{
-    display: flex;
-    flex-direction: column;
-    height: 97vh;
-    align-items: center;
-    justify-content: space-around;
+.MainContainer {
+  display: flex;
+  flex-direction: column;
+  height: 97vh;
+  align-items: center;
+  justify-content: space-around;
 }
-h1{
-    color: white;
-    font-size: 35px;
-}
-
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+h1 {
+  color: white;
+  font-size: 25px;
 }
 
-form input{
-    background-color: transparent;
-    height: 50px;
-    width: 340px;
-    border-radius: 20px;
-   margin-top: 20px;
-    padding: 0 10px;
-    border: 2px solid red;
-    color: white;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 }
-form input[type="submit"]{
-    width: 100px;
+label {
+  margin-top: 30px;
 }
-form input[type="submit"]:hover{
-    background-color: red;
-        border: 4px solid white;
-        box-shadow: 0px 0px 10px white;
-        transition: 0.2s ease-in-out;
+form input {
+  background-color: transparent;
+  height: 50px;
+  width: 340px;
+  border-radius: 20px;
+  margin-top: 20px;
+  padding: 0 10px;
+  border: 2px solid red;
+  color: white;
+}
+form input[type="submit"] {
+  width: 100px;
+}
+form input[type="submit"]:hover {
+  background-color: red;
+  border: 4px solid white;
+  box-shadow: 0px 0px 10px white;
+  transition: 0.2s ease-in-out;
+}
+#ContainerOfButtons{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 97vh;
+}
+#ContainerOfButtons a{
+  color: white;
+  border: 4px solid red;
+  background-color: transparent;
+  height: 50px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  text-decoration: none;
+}
+#ContainerOfButtons a:hover {
+  background-color: red;
+  border: 4px solid white;
+  box-shadow: 0px 0px 10px white;
+  transition: 0.2s ease-in-out;
 }
 
 @media only screen and (max-width: 600px) {
-  h1{
+  h1 {
     font-size: 20px;
   }
 }
